--- a/docs/CHANGES.txt
+++ b/docs/CHANGES.txt
@@ -4,6 +4,8 @@
 - Allow PAS plugin loading to continue in debug mode (development) with an error warning if the kerberos library cannot be loaded on unix.
   [fredvd]
 
+- Added uninstall profile
+
 2.3.1 (2014-07-04)
 ------------------
 
